--- a/src/app/components/projects-page/projects-page.component.scss
+++ b/src/app/components/projects-page/projects-page.component.scss
@@ -6,7 +6,7 @@
   .heading-container {
     display: flex;
     flex-direction: column;
-    margin: 0 0 10vh 0;
+    margin: 0 0 11vh 0;
     gap: 24px;
 
     app-contact-button {
@@ -15,6 +15,6 @@
   }
 
   .card-container {
-    margin: 0 0 10vh 0;
+    margin: 0 0 11vh 0;
   }
 }
